--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,8 @@ header{
 	margin-bottom:170px;
 	
 	
-	
-	
+	box-shadow:0px 0px 1px 0px rgba(233,130,61,.7),
+	0px 0px 1px 0px rgba(233,130,61,.7);
 }
 
 
@@ -99,7 +99,7 @@ header{
 }
 
 .homes  .block .home-top{
-	border-bottom:1px solid #777777;
+	
 	height:70px;
 	
 	padding-top:25px;
@@ -109,14 +109,13 @@ header{
 	color:#333333;
 	
 	text-shadow:1px 0px 0px #555555;
-	box-shadow:0px 0px 1px 0px rgba(233,130,61,.7),
-	0px 0px 1px 0px rgba(233,130,61,.7);
+	border-bottom:1px solid rgba(233,130,61,.3);
 	
 
 }
 
 .homes  .block .home-label{
-	border-bottom:1px solid #777777;
+	
 	
 	height:33px;
 	padding-top:17px;
@@ -124,8 +123,7 @@ header{
 	font-size:14px;
 	color:#333333;
 	font-family:Arial;
-	box-shadow:0px 0px 1px 0px rgba(233,130,61,.7),
-	0px 0px 1px 0px rgba(233,130,61,.7);
+	
 	
 
 }
@@ -442,7 +440,7 @@ min-height:500px;
 
 .head-p{
 	margin-top:5px;
-	color:#777777;
+	color:#555;
 	width:45%;
 	font-size:14px;
 	margin:5px auto;
@@ -783,9 +781,10 @@ background:transparent;
 
 .main-p{
 	margin-top:25px;
-	color:#777777;
+	color:#555;
 	width:140%;
 	font-size:14px;
+	
 	
 	
 }
@@ -954,7 +953,7 @@ margin-top:2%;
 .copyrights
 {
 	
-	margin-left:28%;
+	margin-left:34%;
 	font-size:14px;
 	margin-bottom:30px;
 	color:#777777;
@@ -963,7 +962,7 @@ margin-top:2%;
 .contacts {
 	float:right;
 	margin-right:3%;
-	margin-top:4%;
+	margin-top:1%;
 }
 
 .clear {
@@ -1010,12 +1009,13 @@ margin-top:2%;
 
 
 .footer-logo {
-	background:url("../images/logo_foot.png") no-repeat 50% 0;
-	min-height:100px;
-	height:150px;
+	background:url("../images/logo_foot.png") no-repeat 50% 100%;
+	height:60px;
+	
 	width:150px;
-	background-size:100%;
-	margin-right:1%;
-	margin-top:55px;
+	background-size:80%;
+	margin-right:37%;
+	
+	
 float:right;	
 }
